@@ -1044,6 +1044,7 @@ about.text=jEdit is brought to you by\n\
 	Eric Benoit\n\
 	Eric Berry\n\
 	Eric Ladner\n\
+	Evan Wright\n\
 	Fan Ho Yin\n\
 	Francesc Roses\n\
 	George Hovey\n\
